Added story about QA in Futurice

--- a/books.bib
+++ b/books.bib
@@ -86,6 +86,14 @@ title = {Desk Check Guide},
 url = {https://sites.google.com/a/campioncollege.com/it_eveningschoool/problem-solving-and-programming/desk-check-guide}
 }
 
+
+@ONLINE{futuricefact,
+author = {Futurice},
+title = {Futurice - Fact Sheet},
+url = {http://www.futurice.com/wp-content/uploads/2014/02/Fact-Sheet-English2.pdf}
+}
+
+
 @book{poppendieck2006implementing,
   title={Implementing Lean Software Development: From Concept to Cash},
   author={Poppendieck, M. and Poppendieck, T.},
