Added an article from lisa crispin

--- a/books.bib
+++ b/books.bib
@@ -90,6 +90,7 @@ url = {https://sites.google.com/a/campioncollege.com/it_eveningschoool/problem-s
 @ONLINE{futuricefact,
 author = {Futurice},
 title = {Futurice - Fact Sheet},
+year = {2014},
 url = {http://www.futurice.com/wp-content/uploads/2014/02/Fact-Sheet-English2.pdf}
 }
 
@@ -132,4 +133,11 @@ url = {http://www.futurice.com/wp-content/uploads/2014/02/Fact-Sheet-English2.pd
   url={http://books.google.fi/books?id=abM4662\_lF4C},
   year={1980},
   publisher={New American Library}
+}
+
+@ONLINE{stareastcrispin,
+author = {Lisa Crispin},
+title = {STAREAST: Agile testing and defect tracking},
+year = {2011},
+url = {http://searchsoftwarequality.techtarget.com/tip/STAREAST-Agile-testing-and-defect-tracking}
 }
