Removed a TODO-entry for agile numbers because of the lack of information present

--- a/improving/s_preventing.tex
+++ b/improving/s_preventing.tex
@@ -68,7 +68,7 @@ These methods are based on the actual methods present in the work done by the 17
 
 % TODO: Principlet avattuna paremmin ??????
 
-TODO: Luvut ja faktat 25\% Defect prevention efficiency, 5\% Defect removal efficiency p. 136
+% TODO: Luvut ja faktat 25\% Defect prevention efficiency, 5\% Defect removal efficiency p. 136
 
 % Embedded users p.136 p.58
 
