Added the ingresses

--- a/improving/c_improving.tex
+++ b/improving/c_improving.tex
@@ -1,7 +1,7 @@
 
  \chapter{Improving Software Quality}
- 
-Quality of a software product can be influenced throughout its life cycle with multiple approaches. Pursuing high quality means having methods in use for both decreasing the amount of defects and maintaining good structural quality. In addition to these technical approaches, projects should have methods to assure high quality of specification and implementation process. Methods for improving quality can be split into defect prevention methods, pretest methods, testing and post-release methods. Preventive and pretest methods contain actions such as reviews, inspections and audits. Testing includes various types of testing the functionality. Post-release methods focus on maintainability, defect discovery and defect repairing. Unless stated otherwise, the activities mentioned in this chapter are based on the work of Capers Jones presented in the book The Economics of Software Quality.~\cite{jones2011economics}
+
+In this chapter, the basic methodology and activities for improving quality are introduced. Topics include dividing the life cycle of a software into separate periods from the perspective of quality improvement. These periods and the according activities are then described in detail. Unless stated otherwise, the content of this chapter is based on the work of Capers Jones presented in the book The Economics of Software Quality.~\cite{jones2011economics}
 
 % ROI: Three main activities: Review, process audit and testing
 
