--- a/qa_startup/c_qa_startup.tex
+++ b/qa_startup/c_qa_startup.tex
@@ -1,7 +1,7 @@
 
  \chapter{Improving Quality in Software Startup Project}
 
-Improving quality in a startup environment differs from the QA activities in traditional software development. This is because the requirements and goals of a startup project are usually considerably different from a traditional software projects. Furthermore, even the term software quality can be partially redefined for a better fit in a software startup. Eric Ries describes that the development of Minimum Viable Products questions the traditional notions of quality and this is the most vexing aspects of the development.~\cite{ries2011lean}
+This chapter describes the differences between quality improvement in traditional software development and modern software startup. First, the meaning of software quality is redefined in a startup environment. Second, the basis of quality and the activities improving quality in a startup environment are described. Third, the activities from traditional software development are linked to the activities used in modern software development. Finally, the practices used in the company responsible for case project described in the next chapter are introduced.
 
 \input{qa_startup/s_evaluation}
 
