Added missing preludes

--- a/qa_startup/s_evaluation.tex
+++ b/qa_startup/s_evaluation.tex
@@ -25,7 +25,7 @@ Lean Startup method is aiming for the goal of winning over customers and not opp
 
 \section{Foundations of high quality}
 
-TODO: Johdatus
+Implementing high quality software starts from the beginning of the project. The foundations of high quality have to be solid for the overall high quality to emerge. These foundations are at the structure of the code and other deliverables.
 
  \subsection{Clean code} 
 
@@ -45,7 +45,7 @@ TODO: Johdatus
 
 \section{Aiming towards high quality}
 
-JOHDATUS
+Achieving high quality requires discipline in both team work and individual development. A team of motivated experts with solid leadership is able to make the required decisions and keep the pace of development high. This kind of team can execute the development in a way that enables the emerging of integrity in the product.
 
 \subsection{Build Integrity In} 
 
