Added citation to KLOC-FP converstion table

--- a/books.bib
+++ b/books.bib
@@ -141,3 +141,11 @@ title = {STAREAST: Agile testing and defect tracking},
 year = {2011},
 url = {http://searchsoftwarequality.techtarget.com/tip/STAREAST-Agile-testing-and-defect-tracking}
 }
+
+@ONLINE{kloctofp,
+author = {Quantitative Software Management Inc.},
+title = {Function Point Languages Table},
+year = {2014},
+url = {http://www.qsm.com/resources/function-point-languages-table}
+}
+
