--- a/case/s_objectives.tex
+++ b/case/s_objectives.tex
@@ -17,7 +17,7 @@ The project was divided into multiple phases. In the scope of this thesis, five 
 
 The development team consisted of a few developers, a user experience and design specialist and a project manager. The size and structure of the development team stayed rather consistent, but the individuals belonging to the team were changed several times during the project. Also the pace of the development varied somewhat between the phases.
 
-In the description of each of the phases, the amount of functionality is approximated by using a conversion from the amount of source code lines to function points. The user interface is implemented with web technologies, so the amount of Javascript code is used. For the backend, the implementation language is Groovy, which is assumed to be close to Java in function points. \textbf{TODO: viite http://www.qsm.com/resources/function-point-languages-table}
+In the description of each of the phases, the amount of functionality is approximated by using a conversion from the amount of source code lines to function points~\cite{kloctofp}. The user interface is implemented with web technologies, so the amount of Javascript code is used. For the backend, the implementation language is Groovy, which is assumed to be close to Java in function points.
 
 % Content
 \textbf{Phase one.} The feature content of the first phase included the implementation of the mobile client and administration interface. The mobile client was for recording the presences of the children and the nurses. The administration interface included the principal editing of kindergartens, care groups, children and nurses.
