Commented away some TODO-items

--- a/improving/s_pretest.tex
+++ b/improving/s_pretest.tex
@@ -62,11 +62,12 @@ The statistics by Capers Jones show that Scrum sessions are used in over 90\% of
 \subsection{Client Reviews of Specification} 
 \label{subsec:clientreview}
 
-Client reviews of specification are, like the former two methods, among the oldest of defect removal methods. It is still not enough used in average software projects. One of the authors of "The Economy of Software Quality" has got experience in lawsuits for canceled or defective projects. In most of the lawsuits the supplier of the software accuses the customer for failing to review the designs and other documents or not making a remark about any problems during the reviews. In some cases the customer has even accepted the materials quoted in the trial.
+Client reviews of specification are, like the former two methods, among the oldest of defect removal methods. It is still not enough used in average software projects. One of the authors of "The Economy of Software Quality" has got experience in lawsuits for canceled or defective projects. In most of the lawsuits the supplier of the software accuses the customer for failing to review the designs and other documents of not making a remark about any problems during the reviews. In some cases the customer has even accepted the materials quoted in the trial.
 
 The products reviewed by customers usually don't include inner workings of software applications, like source code, test cases or detailed design. Capers Jones presents a list of 12 major items in directly funded software projects, which usually are reviewed:
 
-TODO: Näihin lause tai pari kuvailemaan tarkoitusta
+% TODO: Näihin lause tai pari kuvailemaan tarkoitusta
+%	Liekö tarpeellista?
 
 \begin{enumerate}
 	\item Requirements.
