--- a/improving/s_testing.tex
+++ b/improving/s_testing.tex
@@ -77,7 +77,7 @@ New function testing is used in over 99\% of new software projects and also in o
 
  \subsection{Regression Testing}
 
-TODO: Tämä on vähän vaikea selitettävä kun oikeastaan regressiotestausta voidaan tehdä kaikilla tasoilla? No niin tietysti tuota new function testiäkin, mutta regression suhteen oikeaa kohtaa tässä on vaikea osoittaa.
+% TODO: Tämä on vähän vaikea selitettävä kun oikeastaan regressiotestausta voidaan tehdä kaikilla tasoilla? No niin tietysti tuota new function testiäkin, mutta regression suhteen oikeaa kohtaa tässä on vaikea osoittaa.
 
 Regression testing is a method of testing targeting the opposite of new function testing. In regression testing, the subjects under tests are old functionalities and features. The word "regression", in the context of software development, means an unintentional damage done to existing features while introducing new functionality. Regression testing also aims to make sure the known defects, repaired before the implementation of the new features, don't reappear.
 
