Changed Bibliography to References

--- a/general/c_references.tex
+++ b/general/c_references.tex
@@ -1,8 +1,10 @@
 
 % lähdeluettelo
 % seuraavia voi käyttää bibtex:n kanssa (edellyttää tiedoston books.bib)
-\bibliographystyle{plain}
-\bibliography{books}
- 
+
+ \renewcommand{\bibname}{References}
+ \bibliographystyle{plain}
+ \bibliography{books}
+
 %\appendix
 %\renewcommand{\chaptername}{Liite}
