--- a/general/c_intro.tex
+++ b/general/c_intro.tex
@@ -1,10 +1,35 @@
 
 \chapter{Introduction}
- 
-Konteksti
 
-Ratkaistava ongelma
+%Konteksti
+% Koodauskielien, frameworkkien, ympäristöjen (as a service) kehittyminen ja osaamisen lisääntyminen on tehnyt mahdolliseksi softan tekemisen ilman massiivista budjettia, suurta tiimiä tai pitkää prosessia.
+% Lean ja Agile on helpottanut ja nopeuttanut kehitystyötä ja tehnyt mahdolliseksi nopean validoinnin ja julkaisemisen.
+% 
 
-"Tässä diplomityössä..."
+Progress in recent history has made developing new products and services in the field of software development increasingly easy. New and improved programming languages and frameworks are introduced constantly. These frameworks provide easy to start platforms for new software development removing the need for excessive planning and understanding of many low-level implementation details. In addition, the need for expensive hardware setup has come obsolete as several instances have appeared offering reasonably priced execution environments as a service. 
 
-Rakenne luku kerrallaan + sisällön esittely "lause per luku"
+These changes in the industry along with the progress in development processes have brought the possibility to create software business closer to every would-be entrepreneur. Developing software with Agile or Lean methodology with modern technologies have lowered the initial time and resources required. Experienced software developers can implement a prototype as fast as in weeks starting from scratch and ending in having a working product publicly available. Attempts to create the next big software product are on a rise as the stories of success spread around the globe.
+
+% TODO: lisää kontekstia?
+
+%Ratkaistava ongelma
+% Helppo ja nopea tekeminen johtaa helposti huonoon laatuun sekä budjetin ja aikataulun kasvuun
+% 
+
+Since the amount of attempts for success are increasing, so is the amount of companies succeeding. When a product built with minimum effort starts to prosper, the demand for high quality emerges. As products done by traditional software development are built with large amounts of effort used to improving the quality of the product, modern startup entrepreneurs may become confused when considering the quality of their product. The methods and activities used in traditional software development may seem separate from the rapid development of modern products. In addition, modern software development methodologies focus on different aspects of software quality than in traditional software development.
+
+%"Tässä diplomityössä..."
+% Käsitellään perinteisiä laadunvarmistusmenetelmiä sekä niiden tehokkuutta
+% Kerrotaan startupista yleisesti sekä sen määritelmästä laadulle
+% Kerrotaan perinteisten laadunvarmistusmenetelmien soveltumisesta nykyisiin startupin juttuihin
+% Käsitellään esimerkkinä CASE-projekti, joka on pienehkön budjetin projekti startupille
+
+%Rakenne luku kerrallaan + sisällön esittely "lause per luku"
+
+Chapter 2 
+
+Chapter 3 
+
+Chapter 4 
+
+Chapter 5 
