Added more content on introduction

--- a/general/c_intro.tex
+++ b/general/c_intro.tex
@@ -24,12 +24,14 @@ Since the amount of attempts for success are increasing, so is the amount of com
 % Kerrotaan perinteisten laadunvarmistusmenetelmien soveltumisesta nykyisiin startupin juttuihin
 % Käsitellään esimerkkinä CASE-projekti, joka on pienehkön budjetin projekti startupille
 
+In this thesis, software quality in a startup environment is discussed. Traditional quality improvement methods are presented and linked to the methods recommended in startup environments. Also a real-life software project for a Finnish startup is presented for illustration purposes. The project executed in Futurice, a Finnish software company, is evaluated by using the data gathered after the project from interviews of the project stakeholders.
+
 %Rakenne luku kerrallaan + sisällön esittely "lause per luku"
 
-Chapter 2 
+Chapter 2 introduces the background by defining software quality and startup environment.
 
-Chapter 3 
+Chapter 3 describes the methods and activities improving software quality and divides them in phases of traditional software development.
 
-Chapter 4 
+Chapter 4 redefines quality in context of a software startup and describes the methods of quality improvement applicable in startup software development.
 
-Chapter 5 
+Chapter 5 presents the execution and phases of the case project and evaluates the quality achieved based on the interviews of the stakeholders.
