--- a/background/c_background.tex
+++ b/background/c_background.tex
@@ -1,7 +1,7 @@
 
  \chapter{Background}
  
-This chapter describes software quality and methods for improving quality in software projects. The first section describes software quality in general and the motivation behind improving quality. The second section explains the background and context of a startup environment.
+This chapter describes software quality and startup environment. The first section describes software quality in general and the motivation behind improving quality. The second section explains the context of a startup environment and the phases in the life of a startup.
 
  \input{background/s_quality_general}
 
