Fiilaus on conclusions

--- a/conclusions/c_conclusions.tex
+++ b/conclusions/c_conclusions.tex
@@ -23,3 +23,5 @@
 Improving quality in a software startup development emphasizes the importance of defect prevention over defect removal. This is common with traditional software development. In traditional software development though, the effort put to defect removal activities and testing has larger share of total effort than in startup environment. Another difference between these two environments is that in modern startup environment, the development is usually done in short iterations. The patterns in traditional development are not applicable in this kind of development as such, but the activities can be applied by adjusting them for use in short iterations.
 
 When traditional quality improvement has more focus on the technical aspects, methodologies of modern software development quality focus on the people and processes of development. Both the team and individuals are considered important and the emphasis is on the motivation, expertise and leadership of the personnel. The development should include plenty of communication and the team should have all the resources and authority to make all the important decisions. The technical aspects to consider in software startups are the integrity of the product and the iterative development containing constant improvement.
+
+% Further research on the topic could focus more on the human aspects of the development and ignore the traditional software quality assurance. 
